# neuralpredictors

./: .gitignore  .pre-commit-config.yaml  .travis.yml  Dockerfile  DockerfileBethge  LICENSE  Makefile  README.md  docker-compose.yml  docker-compose.yml.jinja  mypy_files.txt  pyproject.toml  requirements-dev.txt  requirements.txt  run_mypy.sh  setup.py
.github/workflows/: black.yml  isort.yml  mypy.yml  test.yml
jupyter/: jupyter_notebook_config.py  run_jupyter.sh
mlutils/: constraints.py  distributions.py  general.py  measures.py  regularizers.py  stop_closues.py  training.py  utils.py
mlutils/data/: datasets.py  exceptions.py  samplers.py  transforms.py  utils.py
mlutils/layers/: __init__.py  activations.py  cores.py  flows.py  hermite_layers.py  legacy.py  readouts.py
neuralpredictors/: distributions.py  measures.py  old_constraints.py  regularizers.py  training.py  utils.py
neuralpredictors/data/: datasets.py  samplers.py  transforms.py  utils.py
neuralpredictors/layers/: __init__.py  activations.py  affine.py  architectures.py  attention.py  conv.py  cores.py  depth_separable.py  flows.py  hermite.py  hermite_layers.py  legacy.py  readouts.py  squeeze_excitation.py
neuralpredictors/measures/: __init__.py  functions.py  modules.py  np_functions.py  zero_inflated_losses.py
neuralpredictors/training/: __init__.py  cyclers.py  (+5 more)
notebooks/: 2dcores_starter.ipynb  Movie Dataset and Loaders.ipynb  example_sysident_models.ipynb  readouts_tutorial.ipynb
test/: test_TransferLearningCore.py  test_constraints.py  test_flatten_json.py  utils_for_tests.py
(+37 files in other folders)
