[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "neuralpredictors"
version = "0.3.0"
description = "Sinz Lab Neural System Identification Utilities"
dependencies = [
    "numpy>=1.20",
    "torch",
    "tqdm",
    "pandas",
    "h5py",
    "scipy",
]

[[project.authors]]
name = "Sinz Lab"
email = "software@sinzlab.net"

[project.urls]
"GitHub" = "https://github.com/sinzlab/neuralpredictors"

[tool.setuptools]
packages = ["neuralpredictors"]

[tool.black]
line-length = 120

[tool.coverage.run]
branch = true
source = ["neuralpredictors"]

[tool.mypy]
python_version = "3.8"
files = ["neuralpredictors", "test"]
exclude = "old_\\w+\\.py$"
strict = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true

[[tool.mypy.overrides]]
module = [
    "h5py",
    "scipy.signal",
    "scipy.special",
    "skimage.transform",
    "torchvision",
    "tqdm"
]
ignore_missing_imports = true

[tool.isort]
profile = "black"
